# stmf32f303_tests_rust

./: .gitignore  fix_permissions.sh
.devcontainer/: devcontainer.json
docker/: Dockerfile
stmf32f03_tests/: Cargo.toml
stmf32f03_tests/src/: main.rs
