[package]
name = "stmf32f303_tests"
version = "0.1.0"
authors = ["Lucas Zanella <me@lucaszanella.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.3"
nb = "0.1.2"
cortex-m = "0.6.2"
cortex-m-rt = "0.6.11"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2.0"
panic-semihosting = "0.5"


[dependencies.stm32f3xx-hal]
version = "0.6.1"
features = ["rt", "stm32f303xc", "defmt"]